# maurilib

./: CMakeLists.txt  README.md
cmake/: maurilibConfig.cmake.in
samples/: CMakeLists.txt  range.cpp
src/: CMakeLists.txt
src/mauri/: CMakeLists.txt
src/mauri/math/: Range.cpp  Range.hpp  Range.test.cpp
